[package]
name = "Browser"
version = "0.1.0"
authors = ["anoman <vedantgandhipersonal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx="0.14.0"
gfx_text="0.15.0"
gfx_window_glutin="0.14.0"
glutin="0.7.1"

[[bin]]
name="browser"
path="bin/browser.rs"